# ts_forecaster_lib

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.core.txt  requirements.dev.txt  requirements.txt  requirements.win.txt
raw_data/fit/walmart_patchmixer_ab/: ab_results_by_seed.csv  ab_results_summary.csv
raw_data/fit/walmart_patchtst_ab/: ab_results_by_seed.csv  ab_results_summary.csv
raw_data/fit/walmart_titan_ab/: ab_results_by_seed.csv  ab_results_summary.csv
raw_data/train_data/: walmart_best_feature_train.parquet
src/model_test/: PatchMixer_AB_walmart_test.ipynb  PatchTST_AB_ETT1h_test.ipynb  PatchTST_AB_test.ipynb  PatchTST_AB_walmart_test.ipynb  PatchTST_simple_test.ipynb  Titan_AB_walmart_test.ipynb  check_data_distribution.ipynb  model_validation.ipynb  patchTST_AB_walmart.ipynb  patchTST_AB_walmart_test.ipynb  patchTST_simple_test.ipynb  patchmixer_AB_walmart_test.ipynb  patchtst_validation.ipynb  short_series_forecast_test.ipynb  total_ltb.ipynb  total_running.ipynb
src/model_test/dsetrade/: exogenous_test.ipynb  exogenous_train.ipynb
src/model_test/preprocess/: check_data_distribution.ipynb  data_handling.ipynb
src/modeling_module/: __init__.py
src/modeling_module/api/: data.py  infer.py  train.py
src/modeling_module/data_loader/: MultiPartDataModule.py  MultiPartExoDataModule.py  __init__.py
src/modeling_module/model_test/: data_handling.ipynb  donor_transfer.ipynb  model_validation.ipynb  total_ltb.ipynb  total_running.ipynb
src/modeling_module/models/: __init__.py  (+1 more)
tests/: test_public_api_import.py
(+111 files in other folders)
